--- a/Phase 2 - Car Detection/Car_Detection.ipynb
+++ b/Phase 2 - Car Detection/Car_Detection.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Phase 2 - Car Detection\n",
+    "\n",
+    "                                                  Project Contributors\n",
+    "| Student Name    |      Code     |  \n",
+    "|----------|:-------------:|\n",
+    "| Hassan Mohsen Hassan Ahmed |  16T0180 | \n",
+    "| Ahmed Abdallah Abdallah Selim |  12IC004 |\n",
+    "| Ahmed Nabih Belyas Abdel Zaher  | 11T0029 | \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -307,7 +323,7 @@
     "        # Define a bounding box based on min/max x and y\n",
     "        bbox = ((np.min(nonzerox), np.min(nonzeroy)), (np.max(nonzerox), np.max(nonzeroy)))\n",
     "        # Draw the box on the image\n",
-    "        cv2.rectangle(img, bbox[0], bbox[1], (255,0,0), 6)\n",
+    "        cv2.rectangle(img, bbox[0], bbox[1], (0, 176, 255), 6)\n",
     "        \n",
     "        box_list.append(bbox)\n",
     "\n",
@@ -481,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -499,17 +515,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready output_videos/project_video_out.mp4\n",
-      "CPU times: total: 1h 2min 8s\n",
-      "Wall time: 18min 6s\n"
+      "t:  83%|████████▎ | 1052/1260 [13:45<02:39,  1.30it/s, now=None]"
      ]
     }
    ],
@@ -527,26 +533,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<video width=\"960\" height=\"540\" controls>\n",
-       "  <source src=\"project_video_out.mp4\">\n",
-       "</video>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "video = 'project_video_out.mp4'\n",
     "HTML(\"\"\"\n",
@@ -558,36 +547,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video output_videos/challenge_video_out.mp4.\n",
-      "Moviepy - Writing video output_videos/challenge_video_out.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                              \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready output_videos/challenge_video_out.mp4\n",
-      "CPU times: total: 23min 43s\n",
-      "Wall time: 7min 51s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "global first_frame, frame_count\n",
     "frame_count = 0\n",
@@ -602,26 +564,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<video width=\"960\" height=\"540\" controls>\n",
-       "  <source src=\"challenge_video_out.mp4\">\n",
-       "</video>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "video = 'challenge_video_out.mp4'\n",
     "HTML(\"\"\"\n",
