--- a/Phase 2 - Car Detection/Car_Detection.ipynb
+++ b/Phase 2 - Car Detection/Car_Detection.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     "        # Define a bounding box based on min/max x and y\n",
     "        bbox = ((np.min(nonzerox), np.min(nonzeroy)), (np.max(nonzerox), np.max(nonzeroy)))\n",
     "        # Draw the box on the image\n",
-    "        cv2.rectangle(img, bbox[0], bbox[1], (0, 176, 255), 6)\n",
+    "        cv2.rectangle(img, bbox[0], bbox[1], (48, 79, 254), 6)\n",
     "        \n",
     "        box_list.append(bbox)\n",
     "\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
     "        #draw old boxes\n",
     "        for unique_car in range(1, labels_prev[1]+1):\n",
     "            draw_img = cv2.rectangle(draw_img, bbox_list_prev[unique_car-1][0],\n",
-    "                                     bbox_list_prev[unique_car-1][1], (255,0,0), 6)\n",
+    "                                     bbox_list_prev[unique_car-1][1],(48, 79, 254), 6)\n",
     "        return draw_img\n",
     "    \n",
     "    heatmap = apply_threshold(heatmap_sum,2)\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -515,7 +515,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "t:  83%|████████▎ | 1052/1260 [13:45<02:39,  1.30it/s, now=None]"
+      "                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready output_videos/project_video_out.mp4\n",
+      "CPU times: total: 55min 4s\n",
+      "Wall time: 15min\n"
      ]
     }
    ],
@@ -533,23 +543,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"output_videos/project_video_out.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "video = 'project_video_out.mp4'\n",
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
     "  <source src=\"{0}\">\n",
     "</video>\n",
-    "\"\"\".format(video))"
+    "\"\"\".format(project_video_output))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video output_videos/challenge_video_out.mp4.\n",
+      "Moviepy - Writing video output_videos/challenge_video_out.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready output_videos/challenge_video_out.mp4\n",
+      "CPU times: total: 21min 46s\n",
+      "Wall time: 6min 30s\n"
+     ]
+    }
+   ],
    "source": [
     "global first_frame, frame_count\n",
     "frame_count = 0\n",
@@ -564,17 +617,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"output_videos/challenge_video_out.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "video = 'challenge_video_out.mp4'\n",
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
     "  <source src=\"{0}\">\n",
     "</video>\n",
-    "\"\"\".format(video))"
+    "\"\"\".format(challenge_video_output))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video output_videos/harder_challenge_video_out.mp4.\n",
+      "Moviepy - Writing video output_videos/harder_challenge_video_out.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready output_videos/harder_challenge_video_out.mp4\n",
+      "CPU times: total: 56min 9s\n",
+      "Wall time: 16min 55s\n"
+     ]
+    }
+   ],
+   "source": [
+    "global first_frame, frame_count\n",
+    "frame_count = 0\n",
+    "first_frame = True\n",
+    "\n",
+    "harder_challenge_video_output = 'output_videos/harder_challenge_video_out.mp4'\n",
+    "clip2 = VideoFileClip('test_videos/harder_challenge_video.mp4')\n",
+    "\n",
+    "challenge_clip = clip2.fl_image(Car_Detection)\n",
+    "%time challenge_clip.write_videofile(harder_challenge_video_output, audio=False, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"output_videos/harder_challenge_video_out.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML(\"\"\"\n",
+    "<video width=\"960\" height=\"540\" controls>\n",
+    "  <source src=\"{0}\">\n",
+    "</video>\n",
+    "\"\"\".format(harder_challenge_video_output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
